--- a/src/Plugins/ftp/Gui/Gui.ui
+++ b/src/Plugins/ftp/Gui/Gui.ui
@@ -84,17 +84,48 @@
    </item>
    <item row="6" column="0" colspan="10">
     <layout class="QGridLayout" name="gridLayout_2">
-     <item row="1" column="0">
-      <widget class="QListWidget" name="listLocalFiles"/>
-     </item>
      <item row="1" column="1">
-      <widget class="QListWidget" name="listServerFiles"/>
+      <widget class="QListWidget" name="listServerFiles">
+       <item>
+        <property name="text">
+         <string>New Item</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>New Item</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>New Item</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>New Item</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>New Item</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>New Item</string>
+        </property>
+       </item>
+      </widget>
      </item>
      <item row="0" column="0">
       <widget class="QLineEdit" name="lineEdit"/>
      </item>
      <item row="0" column="1">
       <widget class="QLineEdit" name="lineEdit_2"/>
+     </item>
+     <item row="1" column="0">
+      <widget class="QListView" name="listLocalFiles"/>
      </item>
     </layout>
    </item>
